[package]
name = "ohmy-mockserver-bridge"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
reqwest = { version = "0.11.4", features = ["json"] }
url = "2.2.2"
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
clap = { version = "2.33.3", features = ["yaml"] }


[dev-dependencies]
tokio = { version = "1.9.0", features = ["rt", "macros"] }